--- a/Makefile.win
+++ b/Makefile.win
@@ -4,15 +4,15 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = P3Lab7_AngelPonce.o
-LINKOBJ  = P3Lab7_AngelPonce.o
+OBJ      = P3Lab7_AngelPonce.o Hogwarts.o Mago.o SombreroClasificador.o MagoGryffindor.o MagoSlytherin.o MagoHufflepuff.o MagoRavenclaw.o
+LINKOBJ  = P3Lab7_AngelPonce.o Hogwarts.o Mago.o SombreroClasificador.o MagoGryffindor.o MagoSlytherin.o MagoHufflepuff.o MagoRavenclaw.o
 LIBS     = -L"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/lib" -L"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include"
 CXXINCS  = -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include/c++"
 BIN      = P3Lab7_AngelPonce.exe
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) 
-DEL      = C:\Program Files (x86)\Embarcadero\Dev-Cpp\devcpp.exe INTERNAL_DEL
+DEL      = C:\Program Files (x86)\Embarcadero\Dev-Cpp\DevCpp.exe INTERNAL_DEL
 
 .PHONY: all all-before all-after clean clean-custom
 
@@ -26,3 +26,24 @@ $(BIN): $(OBJ)
 
 P3Lab7_AngelPonce.o: P3Lab7_AngelPonce.cpp
 	$(CPP) -c P3Lab7_AngelPonce.cpp -o P3Lab7_AngelPonce.o $(CXXFLAGS)
+
+Hogwarts.o: Hogwarts.cpp
+	$(CPP) -c Hogwarts.cpp -o Hogwarts.o $(CXXFLAGS)
+
+Mago.o: Mago.cpp
+	$(CPP) -c Mago.cpp -o Mago.o $(CXXFLAGS)
+
+SombreroClasificador.o: SombreroClasificador.cpp
+	$(CPP) -c SombreroClasificador.cpp -o SombreroClasificador.o $(CXXFLAGS)
+
+MagoGryffindor.o: MagoGryffindor.cpp
+	$(CPP) -c MagoGryffindor.cpp -o MagoGryffindor.o $(CXXFLAGS)
+
+MagoSlytherin.o: MagoSlytherin.cpp
+	$(CPP) -c MagoSlytherin.cpp -o MagoSlytherin.o $(CXXFLAGS)
+
+MagoHufflepuff.o: MagoHufflepuff.cpp
+	$(CPP) -c MagoHufflepuff.cpp -o MagoHufflepuff.o $(CXXFLAGS)
+
+MagoRavenclaw.o: MagoRavenclaw.cpp
+	$(CPP) -c MagoRavenclaw.cpp -o MagoRavenclaw.o $(CXXFLAGS)
